<resources>
    <string name="app_name">TCB</string>
    <string name="Close" />
    <string name="Open" />
    <string name="widget_id">App Widget ID\u0020</string>
    <string name="URL">Vezi ultimele noutati pe blogul nostru!</string>
    <string name="btn_schedule">Schedule Job</string>
    <string name="btn_cancel">Cancel Job</string>
    <string name="job_scheduled">Job scheduled!</string>
    <string name="job_cancelled">Job cancelled!</string>
    <string name="desprenoi">" "Totul a început cu o simplă iniţiativă în primăvara lui 2012 când taximetristul Ion Cristian Roman a dorit să transforme o simplă călătorie prin Bucureşti într-una specială.
        Clienţii primeau bomboane, puteau asculta o muzica placuta sau puteau primi un tur inedit al Capitalei.
        Mai apoi taximetristul s-a gândit că ar putea să strângă carti si jucarii pentru copiii din spitale, urmând ca în fiecare sâmbătă
        să se meargă la Spitalul Clinic de Urgenţă pentru Copii Marie Curie.\n
"
"
        În timp, sute de voluntari şi donatori, parteneri în fapte bune,
        s-au alăturat în proiectele umanitare dedicate mamelor şi copiilor din spitale!\n
"
"
        Taxiul cu Bomboane este, de fapt, o metaforă.
        Este despre gesturi simple care se transformă în fapte bune, despre gesturi mici care pot schimba viaţa celor din jur.
        Este o metaforă despre faptele bune pe care le poate face oricine, pentru că în acest taxi poate urca toată lumea!\n
"
"
        Taxiul are acum câteva curse cu destinaţie deosebită: spitalele de pediatrie şi la şcolile cu nevoi speciale din Bucureşti.\n
"
"
        Voluntarii ajung acolo pentru a aduce zâmbete copiilor bolnavi dar şi celor cu dizabilităţi.
        Cu alte cuvinte, Taxiul cu Bomboane este ecologic, funcţionează cu dragoste, dragostea celor care aleg să împartă timp liber,
        îmbrăţişări şi poveşti, copiilor care au nevoie de speranţă şi încurajări.\n
"
"
        Voluntari de toate vârstele, cu diverse pregătiri profesionale,
        din Bucureşti, dar şi din străinătate, vin să citească poveşti copiilor din spitale, sau să îi ajute pe cei cu dizabilităţi
        să îşi găsească un drum în viaţă, stima de sine şi sentimentul de utilitate.\n
"
"
        Asociaţia are nevoie de susţinere şi de voluntari în toate proiectele pe care le desfăşoară!</string>
    <string name="o_scurta_istorisire">O SCURTA ISTORISIRE</string>
    <string name="inceput">Totul a început cu o simplă iniţiativă în primăvara lui 2012 când taximetristul Ion Cristian Roman a dorit să transforme o simplă călătorie prin Bucureşti într-una specială.\n
"
"
        Clienţii primeau bomboane, puteau asculta o muzica placuta sau puteau primi un tur inedit al Capitalei.
        Mai apoi taximetristul s-a gândit că ar putea să strângă carti si jucarii pentru copiii din spitale, urmând ca în fiecare
        sâmbătă să se meargă la Spitalul Clinic de Urgenţă pentru Copii Marie Curie.\n
"
"
        În timp, sute de voluntari şi donatori, parteneri
        în fapte bune, s-au alăturat în proiectele umanitare dedicate mamelor şi copiilor din spitale!</string>
    <string name="cum_pot_sa_devin_voluntar_al_asociatiei">CUM POT SA DEVIN VOLUNTAR AL ASOCIATIEI?</string>
    <string name="descrierevoluntariat">Taxiul cu Bomboane funcționează numai prin dragostea și dedicația celor care aleg să își împartă timpul liber cu copiii mai puțin norocoși din capitală. Dacă dorești să ni te alături, descarcă unul din pachetele de voluntariat de mai jos, și intră în contact cu noi!</string>
    <string name="detaliilenoastre">DETALIILE NOASTRE
"
"
        \n Adresă: Bulevardul Unirii nr. 57, bl. E4, sc. 2, et. 3, sector 3, București, Romania, 030827
        \n
"
"
        C.I.F. 36389716 – Seria A Nr. De 1025877\n
"
"
        Telefon: 0755-044-247 \n
"
"
        Email: asociatiataxiulcubomboane@gmail.com</string>
    <string name="donatiidirecte">DONATII DIRECTE\n
"
"
        CEC Bank sucursala Traian\n
        IBAN RON: RO75CECEB30930RON4291146 \n
        IBAN EUR: RO75CECEB309C1EUR4291300</string>
    <string name="undenegasiti">UNDE NE GASITI\n
"
"
        Institutului pentru Sănătate a Mamei și a Copilului Alfred Rusescu – marți de la ora 18\n
        Spitalul Clinic de Urgență pentru Copii Grigore Alexandrescu – miercuri de la ora 18\n
        Spitalul Clinic de Urgență pentru Copii Marie Sklodowska Curie – joi de la ora 18\n
        Bomboland – incinta Flaros SA</string>
    <string name="pachet_voluntari_adulti">Pachet Voluntari\n Adulti</string>
    <string name="pachet_voluntari_minori">Pachet Voluntari\n Minori</string>
    <string name="doneaza">Doneaza!</string>

    <string name="despre_noi">Despre noi</string>
    <string name="proiectele_noastre">Proiectele noastre</string>
    <string name="devino_voluntar">Devino voluntar</string>
    <string name="doneazahomepage">Doneaza</string>
    <string name="contact">Contact</string>
    <string name="chat">Chat</string>
    <string name="va_multumim">Va multumim!</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="thanks">Thanks</string>
    <string name="volunteers_tcb">Volunteers tcb</string>
    <string name="storychar">Story characters</string>
    <string name="donation_pic">Donation pic</string>
    <string name="imagine">imagine</string>
    <string name="menu_send_icon">menu send icon</string>
    <string name="logo_of_tcb">logo of tcb</string>
    <string name="login">Login</string>
    <string name="enter_username">enter username</string>
    <string name="enter_password">enter password</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="asociatiataxiulcubomboane_gmail_com">asociatiataxiulcubomboane@gmail.com</string>
    <string name="register">Register</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="click_to_open_sharing_option">Click to open sharing option</string>
    <string name="enlocale">Locale in English !</string>
    <string name="rolocale">Locale in Romanian !</string>
    <string name="langalreadyexists">Language already selected!</string>
    <string name="appwidget_text">Launch Widget</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="logo_tcb">LOGO TCB</string>
    <string name="write_a_message">Write a message...</string>
    <string name="internet_connection">Internet Connected</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="cantbeblank">can\'t be blank</string>
    <string name="onlyalphabet">only alphabet or number allowed</string>
    <string name="atleastfivechar">at least 5 characters long</string>
    <string name="loading">Loading...</string>
    <string name="registrationsuccess">registration successful</string>
    <string name="password">password</string>
    <string name="usernameexists">username already exists</string>
    <string name="connectivityexc">Connectivity Exception</string>
    <string name="usernotfound">user not found</string>
    <string name="incorrectpassw">incorrect password</string>
    <string name="pass">password</string>
    <string name="asociatiagmail">asociatiataxiulcubomboane@gmail.com</string>
    <string name="sendmailvia">Send email via:</string>
    <string name="messagerfc">message/rfc822</string>
    <string name="rating">Rating:</string>
    <string name="textplain">text/plain</string>
    <string name="subjectortitle">Subject/Title</string>
    <string name="choosesharingmethod">Choose sharing method</string>
    <string name="subjecthere">Subject here</string>
    <string name="sharingoption">Sharing Option</string>
    <string name="educatie">Stiri</string>

    <string name="section_id">Section ID:</string>
    <string name="published">Published :</string>
    <string name="news_image">News image</string>
    <string name="time">Time</string>
    <string name="english">English</string>
    <string name="romanian">Romanian</string>
    <string name="select">Select</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="donations">Donations</string>
    <string name="taxi_with_candy">Taxi with Candy</string>
    <string name="add_name">Add Name</string>
    <string name="name">Name</string>
    <string name="cause">Cause</string>
    <string name="retrive_donor">Retrive donor</string>
    <string name="donorsbtn">Donors</string>
    <string name="review">review</string>
    <string name="taxi_image">Taxi image</string>
    <string name="you">You:-</string>

</resources>
