<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/inceput"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/cum_pot_sa_devin_voluntar_al_asociatiei"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textdescvol"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:padding="16dp"
        android:text="@string/descrierevoluntariat"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:gravity="bottom" >


            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                >

            <Button
                android:id="@+id/btnvoladulti"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pachet_voluntari_adulti"
                android:textSize="12sp"
                android:background="@drawable/btnvoladulti"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/btnvolminori"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pachet_voluntari_minori"
                android:textSize="12sp"
                android:background="@drawable/btnvoladulti"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            </RelativeLayout>

    </LinearLayout>
</LinearLayout>